decal-macros/tests/ui/fail/sub_scene_with_children.rs
use decal::decal;

fn main() {
    let frag = decal! {
        Column {}
    };

    let _ = decal! {
        Block {
            Scene(frag) {
                Text("child")
            }
        }
    };
}
